[backend] feat(stix): artifact management (#3511)