@@ -3,8 +3,6 @@ package io.openaev.service.stix;
 import static io.openaev.helper.CryptoHelper.md5Hex;
 import static io.openaev.rest.payload.service.PayloadService.DYNAMIC_DNS_RESOLUTION_HOSTNAME_KEY;
 import static io.openaev.stix.objects.constants.CommonProperties.MODIFIED;
-import static io.openaev.utils.SecurityCoverageUtils.extractAndValidateCoverage;
-import static io.openaev.utils.SecurityCoverageUtils.extractObjectReferences;
 import static io.openaev.utils.constants.StixConstants.*;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -14,7 +12,6 @@ import io.openaev.aop.lock.Lock;
 import io.openaev.aop.lock.LockResourceType;
 import io.openaev.config.OpenAEVConfig;
 import io.openaev.database.model.*;
-import io.openaev.database.repository.PayloadRepository;
 import io.openaev.database.repository.ScenarioRepository;
 import io.openaev.database.repository.SecurityCoverageRepository;
 import io.openaev.opencti.connectors.impl.SecurityCoverageConnector;
@@ -43,6 +40,7 @@ import io.openaev.stix.types.Boolean;
 import io.openaev.stix.types.Dictionary;
 import io.openaev.utils.InjectExpectationResultUtils;
 import io.openaev.utils.ResultUtils;
+import io.openaev.utils.SecurityCoverageUtils;
 import io.openaev.utils.StringUtils;
 import io.openaev.utils.time.TimeUtils;
 import jakarta.annotation.Resource;
@@ -87,7 +85,7 @@ public class SecurityCoverageService {
   // FIXME: don't access the connector directly when we deal with multiple origins
   private final SecurityCoverageConnector connector;
 
-  private final PayloadRepository payloadRepository;
+  private final SecurityCoverageUtils securityCoverageUtils;
 
   /**
    * Parses a STIX JSON string, validates it, and delegates to create and persist a
@@ -105,7 +103,7 @@ public class SecurityCoverageService {
     JsonNode root = objectMapper.readTree(stixJson);
     String stixJsonHash = md5Hex(stixJson);
     Bundle bundle = stixParser.parseBundle(root.toString());
-    ObjectBase stixCoverageObj = extractAndValidateCoverage(bundle);
+    ObjectBase stixCoverageObj = securityCoverageUtils.extractAndValidateCoverage(bundle);
     String externalId = stixCoverageObj.getRequiredProperty(CommonProperties.ID.toString());
 
     return buildSecurityCoverageFromStix(stixCoverageObj, bundle, externalId, stixJsonHash);
@@ -178,15 +176,21 @@ public class SecurityCoverageService {
 
     // Extract Attack Patterns
     securityCoverage.setAttackPatternRefs(
-        extractObjectReferences(bundle.findByType(ObjectTypes.ATTACK_PATTERN)));
+        securityCoverageUtils.extractObjectReferences(
+            bundle.findByType(ObjectTypes.ATTACK_PATTERN)));
 
     // Extract vulnerabilities
     securityCoverage.setVulnerabilitiesRefs(
-        extractObjectReferences(bundle.findByType(ObjectTypes.VULNERABILITY)));
+        securityCoverageUtils.extractObjectReferences(
+            bundle.findByType(ObjectTypes.VULNERABILITY)));
 
     // Extract indicators
     securityCoverage.setIndicatorsRefs(
-        extractObjectReferences(bundle.findByType(ObjectTypes.INDICATOR)));
+        securityCoverageUtils.extractObjectReferences(bundle.findByType(ObjectTypes.INDICATOR)));
+
+    // Extract artifacts
+    securityCoverage.setArtifactsRefs(
+        securityCoverageUtils.extractObjectReferences(bundle.findByType(ObjectTypes.ARTIFACT)));
 
     // Default Fields
     String scheduling = stixCoverageObj.getOptionalProperty(STIX_PERIODICITY, "");
@@ -483,6 +487,18 @@ public class SecurityCoverageService {
           objects);
     }
 
+    if (simulation.getSecurityCoverage().getArtifactsRefs() != null
+        && !simulation.getSecurityCoverage().getArtifactsRefs().isEmpty()) {
+      processCoverageRefs(
+          simulation.getSecurityCoverage().getArtifactsRefs(),
+          simulation,
+          this::getArtifactCoverage,
+          coverage.getId(),
+          sroStartTime,
+          sroStopTime,
+          objects);
+    }
+
     for (SecurityPlatform securityPlatform : assetService.securityPlatforms()) {
       DomainObject platformIdentity = securityPlatform.toStixDomainObject();
       objects.add(platformIdentity);
@@ -522,13 +538,13 @@ public class SecurityCoverageService {
   private void processCoverageRefs(
       Set<StixRefToExternalRef> refs,
       Exercise simulation,
-      BiFunction<String, Exercise, BaseType<?>> coverageFunction,
+      BiFunction<List<String>, Exercise, BaseType<?>> coverageFunction,
       Identifier coverageId,
       Optional<Timestamp> sroStartTime,
       Optional<Timestamp> sroStopTime,
       List<ObjectBase> objects) {
     for (StixRefToExternalRef stixRef : refs) {
-      BaseType<?> coverageResult = coverageFunction.apply(stixRef.getExternalRef(), simulation);
+      BaseType<?> coverageResult = coverageFunction.apply(stixRef.getExternalRefs(), simulation);
       boolean covered = !((List<?>) coverageResult.getValue()).isEmpty();
 
       RelationshipObject sro =
@@ -569,11 +585,11 @@ public class SecurityCoverageService {
     return computeCoverageFromInjects(simulation.getInjects(), securityPlatform);
   }
 
-  private BaseType<?> getVulnerabilityCoverage(String externalRef, Exercise simulation) {
+  private BaseType<?> getVulnerabilityCoverage(List<String> externalRefs, Exercise simulation) {
     return getCoverage(
-        externalRef,
+        externalRefs,
         simulation,
-        id -> vulnerabilityService.getVulnerabilitiesByExternalIds(Set.of(id)),
+        ids -> vulnerabilityService.getVulnerabilitiesByExternalIds(new HashSet<>(ids)),
         inject -> {
           if (inject.getInjectorContract().isPresent()) {
             return inject.getInjectorContract().get().getVulnerabilities();
@@ -583,11 +599,11 @@ public class SecurityCoverageService {
         Vulnerability::getId);
   }
 
-  private BaseType<?> getAttackPatternCoverage(String externalRef, Exercise simulation) {
+  private BaseType<?> getAttackPatternCoverage(List<String> externalRefs, Exercise simulation) {
     return getCoverage(
-        externalRef,
+        externalRefs,
         simulation,
-        id -> attackPatternService.getAttackPatternsByExternalIds(Set.of(id)),
+        ids -> attackPatternService.getAttackPatternsByExternalIds(new HashSet<>(ids)),
         inject -> {
           if (inject.getInjectorContract().isPresent()) {
             return inject.getInjectorContract().get().getAttackPatterns();
@@ -597,21 +613,40 @@ public class SecurityCoverageService {
         AttackPattern::getId);
   }
 
-  private BaseType<?> getDnsIndicatorCoverage(String externalRef, Exercise simulation) {
+  private BaseType<?> getDnsIndicatorCoverage(List<String> externalRefs, Exercise simulation) {
     return getCoverage(
-        externalRef,
+        externalRefs,
         simulation,
-        hostname ->
+        hostnames ->
             simulation.getInjects().stream()
                 .filter(
                     inject ->
                         inject.getContent().has(DYNAMIC_DNS_RESOLUTION_HOSTNAME_KEY)
-                            && hostname.equals(
-                                inject
+                            && hostnames.contains(
+                                (inject
                                     .getContent()
                                     .get(DYNAMIC_DNS_RESOLUTION_HOSTNAME_KEY)
-                                    .textValue()))
-                .collect(Collectors.toList()),
+                                    .textValue())))
+                .toList(),
+        inject ->
+            Optional.ofNullable(inject)
+                .map(Collections::singletonList)
+                .orElse(Collections.emptyList()),
+        Inject::getId);
+  }
+
+  private BaseType<?> getArtifactCoverage(List<String> externalRefs, Exercise simulation) {
+    return getCoverage(
+        externalRefs,
+        simulation,
+        documentIds ->
+            simulation.getInjects().stream()
+                .filter(
+                    inject ->
+                        inject.getPayload().isPresent()
+                            && inject.getPayload().get() instanceof FileDrop fileDrop
+                            && documentIds.contains(fileDrop.getFileDropFile().getId()))
+                .toList(),
         inject ->
             Optional.ofNullable(inject)
                 .map(Collections::singletonList)
@@ -620,13 +655,13 @@ public class SecurityCoverageService {
   }
 
   private <T> BaseType<?> getCoverage(
-      String externalRef,
+      List<String> externalRefs,
       Exercise simulation,
-      Function<String, Collection<T>> entityFetcher,
+      Function<List<String>, Collection<T>> entityFetcher,
       Function<Inject, Collection<T>> contractExtractor,
       Function<T, String> idExtractor) {
     // fetch entity
-    Optional<T> entity = entityFetcher.apply(externalRef).stream().findFirst();
+    Optional<T> entity = entityFetcher.apply(externalRefs).stream().findFirst();
     if (entity.isEmpty()) {
       return uncovered();
     }
